--- a/style.css
+++ b/style.css
@@ -1,2 +1,34 @@
 
-body
+	#page {
+			background-color: #efefef;
+		}
+		#header {
+			background-color: #009933;
+			height: 600;
+			text-align: center;
+		}
+		body {
+			font-family: monospace;
+			font-size: 160%;
+			width: 80%;
+			margin: auto;
+			position: relative;
+			overflow: auto;
+
+		}
+		#nav, #content {
+			height: auto;
+			position: absolute;
+		}
+		#nav {
+			background-color: ef5fef;
+			float: left;
+			width: 260px;
+			font-family: monospace;
+			font-size: 130%;
+			border-right: 3px solid #000000;
+		}
+		#content {
+			left: 300px;
+			right: 0;
+		}
